# project-open-mcp

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  StartClaude.bat  pyproject.toml  run.bat
deploy/: install.sh  nginx-mcp.conf  project-open-mcp.env  project-open-mcp.service
examples/: .mcp.json  claude_desktop_config.json
scripts/: log_hour.py  test_create_project.py
src/project_open_mcp/: __init__.py  auth.py  client.py  logging_setup.py  server.py
