[project]
name = "project-open-mcp"
version = "0.1.0"
description = "MCP server for Project-Open (]po[) — exposes projects, tasks, timesheet, CRM and tickets via the intranet-rest API."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Soltea" }]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
project-open-mcp = "project_open_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project_open_mcp"]
